--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,8 +5,10 @@
 
 body {
   display: flex;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   min-height: 100vh;
+  min-width: 100vw;
   cursor: url("/cursors/default.png"), auto;
   box-sizing: border-box;
   font-family: "Plus Jakarta Sans", sans-serif;
@@ -27,4 +29,21 @@ body {
 }
 .CursorDefault {
   cursor: url("/cursors/default.png"), auto;
+}
+* {
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #ffffff67;
+    border-radius: 99px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: "white";
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+  }
 }
