--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,7 @@ body {
 * {
   ::-webkit-scrollbar {
     width: 6px;
+    height: 6px;
   }
   ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
