--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,8 @@ body {
     border-radius: 99px;
   }
   ::-webkit-scrollbar-thumb:hover {
+    width: 6px;
+    height: 6px;
     background: "white";
     box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
   }
