--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,8 +7,6 @@ body {
   display: flex;
   height: 100%;
   width: 100%;
-  min-height: 100vh;
-  min-width: 100vw;
   cursor: url("/cursors/default.png"), auto;
   box-sizing: border-box;
   font-family: "Plus Jakarta Sans", sans-serif;
@@ -36,7 +34,8 @@ body {
     height: 6px;
   }
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
+    box-shadow: inset 0 0 5px rgb(71, 71, 71);
+    background-color: rgb(71, 71, 71);
     border-radius: 10px;
   }
   ::-webkit-scrollbar-thumb {
@@ -46,7 +45,7 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     width: 6px;
     height: 6px;
-    background: "white";
+    background: black;
     box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
   }
 }
