--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,15 +3,11 @@
 @import url("./fonts.css");
 @import url("./editor/fonts.css");
 @import url("./effects.css");
-body {
-  display: flex;
-  height: 100%;
-  width: 100%;
-  cursor: url("/cursors/default.png"), auto;
-  box-sizing: border-box;
-  font-family: "Plus Jakarta Sans", sans-serif;
-}
+
 #__next {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   width: 100%;
 }
 
@@ -20,6 +16,16 @@ body {
   box-sizing: border-box;
   touch-action: manipulation;
   user-select: none !important;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  cursor: url("/cursors/default.png"), auto;
+  box-sizing: border-box;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  max-width: 100%;
 }
 
 .CursorPointer {
